# recipe-rest-api

./: .pre-commit-config.yaml  README.md  pyproject.toml
core/: settings.py  urls.py
recipes/: admin.py  models.py  serializers.py  urls.py  views.py
recipes/migrations/: 0001_initial.py
recipes/tests/: test_models.py  test_views.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_admin.py  test_models.py  test_views.py
