[tool.poetry]
name = "recipe-rest-api"
version = "0.1.0"
description = "Recipe REST API"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
djangorestframework = "^3.14.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
